syntax = "proto3";
package protocol;
option java_package = "io.mediachain.protocol.client";

import "Types.proto";

// Request messages
message ListCanonicalsRequest {
    uint64 page = 1;
}

message FetchCanonicalRequest {
    string canonicalID = 1;
    bool withRawMetadata = 2;
}


message WorksForAuthorRequest {
    string authorCanonicalID = 1;
}

// Response messages
message CanonicalList {
    repeated CanonicalWithRootRevision canonicals = 1;
}

message CanonicalWithRootRevision {
    string canonicalID = 1;
    MetadataBlob rootRevision = 2;
    Person author = 3;
    RawMetadataBlob rawMetadata = 4;
}

message CanonicalWithHistory {
    string canonicalID = 1;
    repeated MetadataBlob revisions = 2;
}


message WorksForAuthor {
    CanonicalWithRootRevision author = 1;
    repeated CanonicalWithRootRevision works = 2;
}

// Services

service LSpaceService {
    // Queries
    rpc ListCanonicals(ListCanonicalsRequest) returns (CanonicalList);
    rpc FetchCanonical(FetchCanonicalRequest) returns (CanonicalWithRootRevision);
    rpc FetchCanonicalHistory(FetchCanonicalRequest) returns (CanonicalWithHistory);
    rpc ListWorksForAuthor(WorksForAuthorRequest) returns (WorksForAuthor);
}
