syntax = "proto3";

package protocol;
option java_package = "io.mediachain.protocol.client";


message Canonical {
    string multiHash = 1;
    string canonicalID = 2;
    map<string, string> signatures = 3;
}

message ImageBlob {
    string multiHash = 1;
    string title = 2;
    string description = 3;
    string date = 4;
    map<string, string> signatures = 5;
    map<string, string> externalIds = 6;
}

message Person {
    string multiHash = 1;
    string name = 2;
    map<string, string> signatures = 3;
    map<string, string> externalIds = 4;
}

message RawMetadataBlob {
    string multiHash = 1;
    string blob = 2;
    map<string, string> signatures = 3;
}


message MetadataBlob {
    enum BlobType {
        Unknown = 0;
        ImageBlob = 1;
        Person = 2;
        RawMetadataBlob = 3;
    }

    BlobType blobType = 1;
    oneof blob {
        ImageBlob image = 2;
        Person person = 3;
        RawMetadataBlob rawMetadata = 4;
    }

}

